# usbmuxctl

./: .gitignore  MANIFEST.in  Makefile  README.rst  REQUIREMENTS.txt  fastentrypoints.py  pyproject.toml  setup.py
.github/workflows/: build.yaml  check-and-build.yaml  check-and-publish.yaml  qa.yaml
contrib/udev/: 99-usbmux.rules
debian/: changelog  control  rules  usbmuxctl.udev
usbmuxctl/: __init__.py  __main__.py  update.py  usbmuxctl.py
usbmuxctl/firmware/: version.py
